fix spacing and registration button

--- a/wehack.css
+++ b/wehack.css
@@ -53,7 +53,7 @@
 
 .banner .button {
   position: absolute;
-  top: 90%;
+  top: 94%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -67,8 +67,8 @@
   text-align: center;
 
 	display: block;
-  width: 200px;
-  height: 30px;
+  width: 180px;
+  height: 0%;
   max-width: 100%;
   margin: 0 auto;
   margin-bottom: 0;
@@ -77,7 +77,7 @@
   /* transform: translatez(0); */
   text-decoration: none;
   box-sizing: border-box;
-  font-size: 14px;
+  font-size: 80%;
 	font-weight: normal;
 	box-shadow: 0 9px 18px rgba(0,0,0,0.2);
 }
@@ -157,15 +157,6 @@
   line-height: 1.6;
 }
 
-.whyWEHack {
-  margin: auto;
-  width: 80%;
-  padding: 10px;
-  text-align: center;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  line-height: 1.6;
-}
-
 .flex {
   display:flex;
 }
@@ -180,7 +171,8 @@
 }
 
 .videoWrapper {
-  margin-top: 70px;
+  margin: auto;
+  margin-top: 10%;
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
   height: 0;
@@ -193,9 +185,36 @@
   height: 60%;
 }
 
+.whyWEHack {
+  margin: auto;
+  margin-top: -10%;
+  margin-bottom: 15%;
+  width: 80%;
+  padding: 10px;
+  text-align: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  line-height: 1.6;
+}
+
 .sponsor{
   display: block;
   margin: auto;
+  margin-bottom: 0%;
+}
+
+
+.container-headshot {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+}
+
+.headshot {
+  position: relative;
+  display: inline-block;
+  float: left;
+  padding: 10px;
 }
 
 footer {
